event is changed to chapter
